payment service refactoring